Remove fixed height and add ID to editor div

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/workflowEdit/workflowEditDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/workflowEdit/workflowEditDetails.xhtml
@@ -62,7 +62,7 @@
         </p:row>
     </p:panelGrid>
 
-    <div style="height: 800px;">
+    <div id="workflow-editor-wrapper">
         <div class="content" id="js-drop-zone">
 
             <div class="message intro">
