Fix tasks status image.

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -1300,6 +1300,12 @@ footer {
     border-radius: 3px;
 }
 
+.ui-datatable tr td span.task-status {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    border-radius: 3px;
+}
 
 .ui-row-toggler {
     display: inline;
