--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
@@ -33,9 +33,14 @@
         <!-- status -->
         <p:column headerText="#{msgs.status}" id="taskStatus">
             <p:panel id="statusColumn" styleClass="statusColumn">
-                <h:graphicImage value="#{item.processingStatusEnum.bigImagePath}"
-                                title="#{item.processingStatusEnum.title}"
-                                alt="status"/>
+                <h:panelGroup class="task-status"
+                              title="#{item.processingStatusEnum.title}"
+                              style="background-color:
+                                #{item.processingStatusEnum.title == 'statusDone' ? 'var(--task-closed)' : ''}
+                                #{item.processingStatusEnum.title == 'statusInProcessing' ? 'var(--task-inwork)' : ''}
+                                #{item.processingStatusEnum.title == 'statusOpen' ? 'var(--task-open)' : ''}
+                                #{item.processingStatusEnum.title == 'statusLocked' ? 'var(--task-blocked)' : ''};"
+                />
                 <p:panel rendered="#{SecurityAccessController.hasAuthorityToEditTask()}">
                     <!-- Set workflow state to previous step -->
                     <p:commandButton action="#{ProcessForm.setTaskStatusDown}"
