--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskList.xhtml
@@ -46,7 +46,7 @@
 
         <p:column headerText="#{msgs.status}">
             <h:panelGroup class="task-status"
-                          title="#{item.processingStatus.title}"
+                          title="#{item.processingStatusTitle}"
                           style="margin-right:10px; background-color:
                             #{item.processingStatus.title == 'statusDone' ? 'var(--task-closed)' : ''}
                             #{item.processingStatus.title == 'statusInProcessing' ? 'var(--task-inwork)' : ''}
