Use roles not assigned to user and assigned to clients to which user is assigned in the roles popup list

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/addRolesPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/addRolesPopup.xhtml
@@ -28,7 +28,7 @@
             <h:form id="roleForm">
                 <p:dataTable var="item"
                              id="selectRoleTable"
-                             value="#{RoleForm.lazyDTOModel}"
+                             value="#{UserForm.roles}"
                              lazy="true"
                              paginator="true"
                              rows="#{LoginForm.loggedUser.tableSize}"
