--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
@@ -23,6 +23,7 @@
     --alert: #f94a15;
     --error-border: #b94a48;
     --error-background: #f2dede;
+    --carbonblue: #1e3946;
 
     --progress-closed: #42ba37;
     --progress-inwork: #c3d300;
@@ -489,7 +490,7 @@ button.ui-datepicker-trigger.ui-button-icon-only::before {
 }
 
 #imagePreviewForm\:imageControlPanel button {
-    background-color: #d8d8d8;
+    background-color: var(--disabled-light);
 }
 
 #imagePreviewForm\:imageControlPanel button.active .fa {
