--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/pattern-library.css
@@ -473,28 +473,16 @@ button.ui-datepicker-trigger.ui-button-icon-only::before {
     background: var(--lightgray);
 }
 
-#imagePreviewForm\:imageControlPanel {
-    margin-bottom: 10px;
-}
-
-#imagePreviewForm\:imageControlPanel tr {
-    background-color: #d8d8d8;
-}
-
 #imagePreviewForm\:imageControlPanel .ui-panelgrid-cell {
     padding: 0;
 }
 
-#imagePreviewForm\:imageControlPanel .ui-panelgrid-cell:nth-child(2) {
-    border-left: 3px solid #0071bc;
-}
-
 #imagePreviewForm\:imageControlPanel button {
-    background-color: var(--disabled-light);
+    background-color: transparent;
 }
 
 #imagePreviewForm\:imageControlPanel button.active .fa {
-    color: white;
+    color: var(--callto);
 }
 
 #imagePreviewForm\:imageControlPanel button.inactive .fa {
