--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
@@ -22,7 +22,7 @@
             <span id="imageData" data-image="#{request.contextPath}#{MetadataProcessor.currentImage}"/>
             <p:panelGrid id="imageControlPanel" columns="3"
                          rendered="#{MetadataProcessor.imageListExistent}"
-                         style="right: 17px; top: 9px; position: absolute;">
+                         style="right: 47px; top: 0; position: absolute;">
                 <p:column>
                     <p:commandButton id="listViewButton"
                                      update="imagePreviewForm galleryHeadingWrapper"
