--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/pagination.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/pagination.xhtml
@@ -85,7 +85,7 @@
 
                     <p:outputLabel for="fictitiousCheckbox" value="#{msgs.paginationFictitious}"/>
                     <p:selectBooleanCheckbox id="fictitiousCheckbox"
-                                             class="input" style="margin-bottom: 0"
+                                             styleClass="switch input" style="margin-bottom: 0"
                                              value="#{MetadataProcessor.fictitious}"/>
 
                     <h:outputLabel value="#{msgs.counting}:" for="selectPaginationMode"/>
