--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processDataEdit.xhtml
@@ -88,7 +88,7 @@
 
             <div>
                 <p:outputLabel for="useTemplates" value="#{msgs.showInSelectList}" rendered="#{ProzesskopieForm.useTemplates}"/>
-                <p:selectBooleanCheckbox class="input" id="useTemplates" rendered="#{ProzesskopieForm.useTemplates}"
+                <p:selectBooleanCheckbox styleClass="switch input" id="useTemplates" rendered="#{ProzesskopieForm.useTemplates}"
                                          value="#{ProzesskopieForm.prozessKopie.inChoiceListShown}"/>
             </div>
         </p:row>
