--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
@@ -58,7 +58,7 @@
             <p:row>
                 <div>
                     <p:outputLabel for="useLdap" value="#{msgs.ldapActiveNote}"/>
-                    <p:selectBooleanCheckbox id="useLdap" styleClass="input"
+                    <p:selectBooleanCheckbox id="useLdap" styleClass="switch input"
                                              value="#{AuthenticationController.ldapAuthentication}">
                         <p:ajax event="change"/>
                     </p:selectBooleanCheckbox>
